nixidy/generated/prod/mainsail/Deployment-mainsail.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: mainsail
    app.kubernetes.io/instance: mainsail
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mainsail
  name: mainsail
  namespace: printing
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: mainsail
      app.kubernetes.io/instance: mainsail
      app.kubernetes.io/name: mainsail
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: 873fae6a6a23852516ef0f59d07586d1cb781ab6466914c5ed702a94f0648a52
      labels:
        app.kubernetes.io/controller: mainsail
        app.kubernetes.io/instance: mainsail
        app.kubernetes.io/name: mainsail
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/mainsail-crew/mainsail:v2.13.1
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          name: mainsail
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /usr/share/nginx/html/config.json
              name: config
              readOnly: true
              subPath: config.json
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: mainsail
      volumes:
        - configMap:
            name: mainsail
          name: config
