nixidy/generated/prod/mainsail/HTTPRoute-mainsail.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mainsail
  namespace: printing
spec:
  hostnames:
    - mainsail.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: oauth2-proxy
          namespace: identity
          port: 4180
